fix(organisms): unwitting logo image stretch in SfHeader

--- a/packages/shared/styles/components/SfHeader.scss
+++ b/packages/shared/styles/components/SfHeader.scss
@@ -63,6 +63,8 @@ $header-navigation-item-font-weight: 500 !default;
     }
     img, picture{
       height: 100%;
+      width: auto;
+      max-width: unset;
     }
   }
   &__navigation {
